--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     </div>
   </section>
 
-  <!-- Categorías -->
+  <!-- Categorias -->
   <section class="inicio-section">
     <div class="Inicio-text1">
       <h1>Inicia en el mundo de los intercambios de la mejor manera posible</h1>
