--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
       </form>
     </div>
 
-    <!-- Iniciar sesión -->
+    <!-- Iniciar sesion -->
     <div class="form-container Iniciar-Sesion">
       <form (submit)="onLogin($event)">
         
