--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -5,7 +5,7 @@
   font-family: "Montserrat", sans-serif;
 }
 
-/* 🔸 Nuevo contenedor general */
+/* Contenedor general */
 .login-wrapper {
   background: linear-gradient(to right, #ffff, #f2ddfd);
   min-height: 100vh;
@@ -115,20 +115,6 @@
   animation: move 0.6s;
 }
 
-@keyframes move {
-  0%,
-  49.99% {
-    opacity: 0;
-    z-index: 1;
-  }
-  50%,
-  100% {
-    opacity: 1;
-    z-index: 5;
-  }
-}
-
-
 .Iconos-Social {
   margin: 20px 0;
 }
@@ -206,4 +192,20 @@
 
 .container.active .toggle-right {
   transform: translateX(200%);
+}
+
+
+@keyframes move {
+
+  0%,
+  49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  50%,
+  100% {
+    opacity: 1;
+    z-index: 5;
+  }
 }
