se corrigieron errores

--- a/src/app/articulos/articulos.component.html
+++ b/src/app/articulos/articulos.component.html
@@ -104,6 +104,7 @@
       <div class="acciones-articulo">
         <button class="btn-editar" (click)="editarArticulo(articulo)">Editar</button>
         <button class="btn-eliminar" (click)="eliminarArticulo(articulo)">Eliminar</button>
+          <button class="btn-eliminar" routerLink="/mensajes">Enviar Mensaje</button>
       </div>
     </div>
   </div>
